--- a/css/scss/_label.scss
+++ b/css/scss/_label.scss
@@ -1,11 +1,17 @@
 /* MIXINS */
-@mixin label($textColor,$primaryColor) {
+@mixin label($textColor,$primaryColor){
 	background-color: $primaryColor;
 	color: $textColor;
 	border-color: transparent;
 }
 
-@mixin color-label {
+@mixin label-outline($textColor,$primaryColor,$percentage){
+	background-color: tint($primaryColor, $percentage);
+	color: $textColor;
+	border-color: tint($primaryColor, 80);
+}
+
+@mixin color-label{
 	&.ms-info{
 		@include label(#ffffff, $color-blue-1);
 	}
@@ -23,18 +29,37 @@
 	}
 }
 
+@mixin color-outline-label{
+	&.ms-outline-info{
+		@include label-outline(shade($color-blue-3,30),$color-blue-1,95);
+	}
+	
+	&.ms-outline-success{
+		@include label-outline(shade($color-green-3,30),$color-green-1,95);
+	}
+	
+	&.ms-outline-danger{
+		@include label-outline(shade($color-red-3,30),$color-red-1,95);
+	}
+	
+	&.ms-outline-warning{
+		@include label-outline(shade($color-yellow-3,35),$color-yellow-1,95);
+	}
+}
+
 /* BASE LABEL*/
 .ms-label{
 	background-color: #ffffff;
 	border: 1px solid $color-gray-1;
 	color: $color-dark-1;
-	font-size: 1rem;
+	font-size: 0.9rem;
 	margin-right: 0.1rem;
 	padding: 0.2rem 0.4rem;
 	@include border-radius($default-border-radius);
 	
 	/* COLORS */
 	@include color-label;
+	@include color-outline-label;
 	
 	/* SIZES */
 	&.ms-small{
