--- a/css/scss/_articles.scss
+++ b/css/scss/_articles.scss
@@ -27,7 +27,7 @@
 
     	.ms-article-picture-title{
 			position: absolute;
-			bottom: 1rem;
+			bottom: 1.5rem;
 			left: 1rem;
 
 			h1,h2,h3,h4,h5,h6,a{
@@ -40,6 +40,28 @@
 			}
 		}
     }
+
+    .ms-article-infos{
+		margin: 0;
+    	padding: 0.4rem 1rem;
+
+		ul{
+			list-style: none;
+			margin: 0;
+    		padding: 0;
+
+    		li{
+    			display: inline-block;
+    			font-size: 14px;
+				margin: 0 1rem 0 0;
+	    		padding: 0;
+    		}
+		}
+
+		i{
+			color: $color-gray-2;
+		}
+	}
 
     .ms-article-title{
     	display: block;
@@ -65,6 +87,25 @@
 			color: #000;
 			margin: 0;
 			padding: 0;
+		}
+
+		h1,h2,h3,h4,h5,h6{
+			display: block;
+			font-size: 1.5rem;
+			text-decoration: none;
+			font-weight: 600;
+			color: #2c3e50;
+			margin: 1rem 0;
+			padding: 0;
+		}
+
+		.ms-article-text-quote{
+			display: block;
+			border-left: 3px solid $color-gray-1;
+			color: $color-gray-3;
+			font-style: italic;
+			margin: 1rem 0;
+			padding: 0.5rem 0 0.5rem 1rem;
 		}
 	}
 }
