Menu, Button, Card, Users
- Added menu element
- Resize button text
- Change ms-text to ms-content on card
- Fix users border

--- a/css/scss/_global.scss
+++ b/css/scss/_global.scss
@@ -1,7 +1,13 @@
-*,
-*:after,
-*:before{
-	box-sizing: inherit;
+* {
+  -webkit-box-sizing: content-box;
+     -moz-box-sizing: content-box;
+          box-sizing: content-box;
+}
+*:before,
+*:after {
+  -webkit-box-sizing: content-box;
+     -moz-box-sizing: content-box;
+          box-sizing: content-box;
 }
 
 html {
