--- a/css/scss/_users.scss
+++ b/css/scss/_users.scss
@@ -5,6 +5,7 @@
 	border: 1px solid $color-gray-1;
 	overflow: auto;
 	position: relative;
+	box-sizing: border-box;
 	padding: 1rem;
 	@include border-radius($default-border-radius);
 
@@ -16,6 +17,14 @@
 		text-align: center;
 		margin: 0 auto;
 		margin-top: 1rem;
+
+		p {
+			line-height: 1.3rem;
+			margin-block-start: 0;
+			margin-block-end: 0;
+			margin-inline-start: 0;
+			margin-inline-end: 0;
+		}
 	}
 
 	.ms-user-content{
@@ -26,8 +35,8 @@
 
 	.ms-user-pined{
 		position: absolute;
-		top: 10px;
-		right: 10px;
+		top: 0.3rem;
+		right: 0.5rem;
 	}
 
 	&.ms-compact{
