--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -719,6 +719,7 @@ template {
   margin-right: -.25em;
   min-height: 1px;
   padding-left: 10px;
+  padding-right: 10px;
   vertical-align: top;
 }
 
