--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -13,7 +13,6 @@
 @import "_variables";
 
 @import "_grid";
-@import "_color";
 @import "_global";
 @import "_button";
 @import "_alerts";
@@ -30,6 +29,6 @@
 @import "_breadcrumbs";
 @import "_pagination";
 @import "_articles";
-@import "_menu";
+@import "_browser";
 
 
