--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -1,10 +1,10 @@
 /* COLORS BASE */
 $default-bg: #ffffff;
-$default-bg-light: #f3f3f3;
-$default-bg-dark: #111417;
-$default-bg-dark-light: #25282c;
-
+$default-bg-darker: #f3f3f3;;
 $default-font-color: rgba(0,0,0,.85);
+
+$default-bg-dark: #111417;
+$default-bg-dark-lighter: #25282c;
 $default-font-color-dark: #ffffff;
 
 /* COLORS ELEMENTS */
