--- a/css/scss/_alerts.scss
+++ b/css/scss/_alerts.scss
@@ -1,12 +1,27 @@
+/* VARIABLES */
+html{
+  --alert-bg: $default-bg;
+  --alert-font-color: $color-gray-3;
+  --alert-border-color: $color-gray-1;
+  --alert-cross-color: $default-bg;
+}
+
+html[data-theme='dark'] {
+  --alert-bg: $default-bg-dark;
+  --alert-font-color: $default-font-color-dark;
+  --alert-border-color: $default-bg-dark-lighter;
+  --alert-cross-color: $default-bg-dark-lighter
+}
+
 /* MIXIN */
-@mixin alert($textColor,$primaryColor,$secondColor){
+@mixin alert($textColor,$primaryColor){
     color: $textColor;
-    background-color: tint($primaryColor, 5);
+    background-color: $primaryColor;
     border-color: transparent;
 
     .ms-close{
         &:before, &:after {
-            background-color: #ffffff;
+            background-color: var(--alert-cross-color);
         }
     }
 
@@ -21,20 +36,13 @@
     h1,h2,h3,h4,h5,h6{
         color: $textColor;
     }
-
-    @media (prefers-color-scheme: dark) {
-		.ms-close{
-	        &:before, &:after {
-	            background-color: $default-bg-dark-light;
-	        }
-	    }
-	}
 }
 
 @mixin alert-outline($textColor,$primaryColor,$percentage){
+
     color: $textColor;
-    background-color: tint($primaryColor, $percentage);
-    border: 1px solid tint($primaryColor, 70);
+    background-color: rgba($primaryColor,0.15);
+    border: 1px solid rgba($primaryColor,0.35);
 
     .ms-close{
         &:before, &:after {
@@ -47,46 +55,21 @@
     }
 
     hr{
-        background-color: tint($primaryColor, 80);
+        background-color: rgba($primaryColor,0.25);
     }
 
     h1,h2,h3,h4,h5,h6{
         color: $textColor;
     }
-
-    /* Dark Theme */
-	@media (prefers-color-scheme: dark) {
-		color: $primaryColor;
-    	background-color: rgba($primaryColor,0.15);
-    	border: 1px solid rgba($primaryColor,0.40);
-
-    	p{
-	        color: $primaryColor;
-	    }
-
-	    hr{
-	        background-color: rgba($primaryColor,0.3);
-	    }
-
-		h1,h2,h3,h4,h5,h6{
-			color: $primaryColor;
-		}
-
-    	.ms-close{
-	        &:before, &:after {
-	            background-color: $primaryColor;
-	        }
-	    }
-	}
 }
 
 /* BASE */
 .ms-alert{
     width: 100%;
     height: auto;
-    color: $color-gray-3;
-    border: 1px solid $color-gray-1;
-    background-color: $default-bg;
+    color: var(--alert-font-color);
+    border: 1px solid var(--alert-border-color);
+    background-color: var(--alert-bg);
     font-size: 1rem;
     position: relative;
     box-sizing: border-box;
@@ -100,35 +83,35 @@
 
     /* COLORS */
     &.ms-info{
-        @include alert(#ffffff,$color-blue-1,$color-blue-2);
+        @include alert(#ffffff,$color-blue-1);
     }
 
     &.ms-outline-info{
-        @include alert-outline(shade($color-blue-3,30),$color-blue-1,90);
+        @include alert-outline($color-blue-1,$color-blue-1,90);
     }
 
     &.ms-danger{
-        @include alert(#ffffff,$color-red-1,$color-red-3);
+        @include alert(#ffffff,$color-red-1);
     }
 
     &.ms-outline-danger{
-        @include alert-outline(shade($color-red-3,30),$color-red-1,90);
+        @include alert-outline($color-red-1,$color-red-1,90);
     }
 
     &.ms-success{
-        @include alert(#ffffff,$color-green-1,$color-green-3);
+        @include alert(#ffffff,$color-green-1);
     }
 
     &.ms-outline-success{
-        @include alert-outline(shade($color-green-3,30),$color-green-1,90);
+        @include alert-outline($color-green-1,$color-green-1,90);
     }
 
     &.ms-warning{
-        @include alert(#000000,$color-yellow-1,$color-yellow-3);
+        @include alert(#000000,$color-yellow-1);
     }
 
     &.ms-outline-warning{
-        @include alert-outline(shade($color-yellow-3,35),$color-yellow-1,90);
+        @include alert-outline($color-yellow-3,$color-yellow-1,90);
     }
 
     /* CLOSE ICON */
@@ -195,14 +178,4 @@
         padding: 1.7rem 1.2rem;
         font-size: 1.4rem;
     }
-}
-
-
-/* Dark Theme */
-@media (prefers-color-scheme: dark) {
-	.ms-alert{
-		background-color: $default-bg-dark;
-		color: $default-font-color-dark;
-		border-color: $default-bg-dark-light;
-	}
 }
