--- a/css/scss/_browser.scss
+++ b/css/scss/_browser.scss
@@ -1,8 +1,20 @@
+/* VARIABLES */
+html{
+  --browser-bg: $default-bg-darker;
+  --browser-font-color: $default-font-color;
+  --browser-bg-content: $default-bg;
+}
+
+html[data-theme='dark'] {
+  --browser-bg: $default-bg-dark;
+  --browser-font-color: $default-font-color-dark;
+  --browser-bg-content: $default-bg-dark-lighter;
+}
+
 .ms-browser{
-	background-color: #f1f1f1;
-	border: 4px solid #f1f1f1;
-	border-top-left-radius: $default-border-radius;
-	border-top-right-radius: $default-border-radius;
+	background-color: var(--browser-bg);
+	border: 4px solid var(--browser-bg);
+	@include border-top-radius($default-border-radius);
 
 	.ms-tab-browser{
 
@@ -30,21 +42,9 @@
 	}
 
 	.ms-content{
-		background-color: #fff;
+		background-color: var(--browser-bg-content);
 		box-sizing: border-box;
 		overflow: hidden;
 		padding: 10px;
-	}
-}
-
-/* Dark Theme */
-@media (prefers-color-scheme: dark) {
-	.ms-browser{
-		background-color: $default-bg-dark;
-		border: 4px solid $default-bg-dark;
-
-		.ms-content{
-			background-color: $default-bg-dark-light;
-		}
 	}
 }
