--- a/css/scss/_global.scss
+++ b/css/scss/_global.scss
@@ -1,3 +1,14 @@
+/* VARIABLES */
+html{
+  --default-bg: $default-bg;
+  --default-font-color: $default-font-color;
+}
+
+html[data-theme='dark'] {
+  --default-bg: $default-bg-dark-lighter;
+  --default-font-color: $default-font-color-dark;
+}
+
 * {
   -webkit-box-sizing: content-box;
      -moz-box-sizing: content-box;
@@ -15,8 +26,8 @@ html {
 }
 
 body{
-	background-color: $default-bg;
-	color: $default-font-color;
+	background-color: var(--default-bg);
+	color: var(--default-font-color);
 	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"
 }
 
@@ -36,12 +47,4 @@ p{
 	margin-block-end: 1em;
 	margin-inline-start: 0px;
 	margin-inline-end: 0px;
-}
-
-/* Dark Theme */
-@media (prefers-color-scheme: dark) {
-	body{
-		background-color: $default-bg-dark;
-		color: $default-font-color-dark;
-	}
 }
